# bold-utils

./: .gitignore  AsiaBSD2014.md  ChangeLog  LICENSE  Makefile.am  ProjectHome.md  README  VERSION.in  autogen.sh  configure.ac
include/: Makefile.am
include/bold/ADT/: Flags.h  IList.h  IListIterator.h  IListNode.h  OwningPtr.h  Rope.h  StringList.h  StringRef.h  StringSwitch.h  TypeTraits.h  Uncopyable.h
include/bold/Config/: .gitignore  Config.h.in  GeneralOptions.h  SkyConfig.h  SkyConfigBase.h  SkyGlobal.h  SkySettings.h
include/bold/Language/: Compiler.h  CompilerConfig.h  Fourple.h  Tool.h  ToolConfig.h  Toolchain.h  ToolchainRegistry.h
include/bold/Option/: Combo.h  EnumOption.h  FlagOption.h  Option.h  OptionPool.h  OptionPoolReader.h  RangeOption.h
include/bold/Support/: DataTypes.h.in  DiagCommonKinds.inc  Diagnostic.h  DiagnosticEngine.h  DiagnosticInfoMap.h  DiagnosticPolicy.h  DiagnosticPrinter.h  FileBuf.h  FileSystem.h  IOSFwd.h  IOStream.h  MallocAllocator.h  ManagedStatic.h  MemoryAllocator.h  MemoryPool.h  MsgHandler.h  MsgHandling.h  OFStream.h  OStrStream.h  OStream.h  Path.h  Slab.h  SlabIterator.h  TextDiagnosticPrinter.h
include/bold/Support/Bits/: FileBuf.tcc  OFStream.tcc  OStrStream.tcc  OStream.tcc
include/bold/Thread/: TSQueue.h  TSQueue.tcc  Thread.h  ThreadImpl.h
lib/: Makefile.am
lib/ADT/: IList.cpp  IListIterator.cpp  Rope.cpp  StringList.cpp  StringRef.cpp
lib/Config/: GeneralOptions.cpp  SkyConfig.cpp  SkyConfigBase.cpp  SkyGlobal.cpp  SkySettings.cpp
lib/Language/: Compiler.cpp  CompilerConfig.cpp  Fourple.cpp  Tool.cpp  ToolConfig.cpp
lib/Option/: Combo.cpp  EnumOption.cpp  FlagOption.cpp  Option.cpp  OptionPool.cpp  RangeOption.cpp
lib/Support/: Diagnostic.cpp  DiagnosticEngine.cpp  DiagnosticInfoMap.cpp  DiagnosticPolicy.cpp  DiagnosticPrinter.cpp  FileSystem.cpp  IOStream.cpp  ManagedStatic.cpp  MsgHandler.cpp  MsgHandling.cpp  Path.cpp  TextDiagnosticPrinter.cpp
lib/Support/Dragon/: FileSystem.inc  Path.inc
lib/Support/Unix/: Path.inc
lib/Support/Windows/: FileSystem.inc  Path.inc
lib/Thread/: PThreadImpl.inc  QThreadImpl.inc  Thread.cpp  ThreadImpl.cpp
m4/: canoncial_system.m4  config.m4  optimize.m4  pat.m4  unittest.m4
scripts/: envsetup.sh  normal_files.sh  test_files.sh
templates/: header.h  headerTest.h  impl.cpp  implTest.cpp
tools/: Makefile.am
tools/bold/: Makefile.am  main.cpp
tools/unittests/: AllocatorsTest.h  IListTest.cpp  Makefile.am  MemoryAllocatorTest.cpp  MemoryPoolTest.cpp  MemoryPoolTest.h  OFStreamTest.cpp  OwningPtrTest.h  PathTest.cpp  StringListTest.cpp  StringRefTest.h
tools/unittests/data/: file1.txt
unittests/: AllocatorsTest.cpp  FourpleTest.cpp  FourpleTest.h  IListTest.cpp  IListTest.h  Makefile.am  MemoryPoolTest.cpp  OFStreamTest.h  OStrStreamTest.cpp  OStrStreamTest.h  OwningPtrTest.cpp  PathTest.h  RopeTest.cpp  RopeTest.h  StringRefTest.cpp  StringSwitchTest.cpp  StringSwitchTest.h  change.sh  main.cpp
utils/: Makefile.am
utils/build-script/: build.sh
utils/pat/include/pat/Config/: Config.h.in
utils/pat/lib/: Makefile.am
utils/pat/lib/Listeners/: XMLResultPrinter.h
utils/pat/lib/Support/: ManagedStatic.cpp  README
utils/pat/lib/Support/Unix/: Timer.inc
