nobase_include_HEADERS = \
  bold/ADT/BinTree.h \
  bold/ADT/Flags.h \
  bold/ADT/IList.h \
  bold/ADT/IListIterator.h \
  bold/ADT/IListNode.h \
  bold/ADT/OwningPtr.h \
  bold/ADT/Rope.h \
  bold/ADT/StringList.h \
  bold/ADT/StringRef.h \
  bold/ADT/StringSwitch.h \
  bold/ADT/TreeBase.h \
  bold/ADT/TypeTraits.h \
  bold/ADT/Uncopyable.h \
  bold/Config/GeneralOptions.h \
  bold/Config/SkyConfigBase.h \
  bold/Config/SkyConfig.h \
  bold/Config/SkyGlobal.h \
  bold/Config/SkySettings.h \
  bold/Language/CompilerConfig.h \
  bold/Language/Compiler.h \
  bold/Language/Fourple.h \
  bold/Language/Toolchain.h \
  bold/Language/ToolchainRegistry.h \
  bold/Language/ToolConfig.h \
  bold/Language/Tool.h \
  bold/Option/Combo.h \
  bold/Option/EnumOption.h \
  bold/Option/FlagOption.h \
  bold/Option/Option.h \
  bold/Option/OptionPool.h \
  bold/Option/OptionPoolReader.h \
  bold/Option/RangeOption.h \
  bold/Support/Bits/FileBuf.tcc \
  bold/Support/Bits/OFStream.tcc \
  bold/Support/Bits/OStrStream.tcc \
  bold/Support/Bits/OStream.tcc \
  bold/Support/Config.h \
  bold/Support/DiagnosticEngine.h \
  bold/Support/Diagnostic.h \
  bold/Support/DiagnosticInfoMap.h \
  bold/Support/DiagnosticPolicy.h \
  bold/Support/DiagnosticPrinter.h \
  bold/Support/FileBuf.h \
  bold/Support/FileSystem.h \
  bold/Support/IOSFwd.h \
  bold/Support/IOStream.h \
  bold/Support/MallocAllocator.h \
  bold/Support/ManagedStatic.h \
  bold/Support/MemoryPool.h \
  bold/Support/MsgHandler.h \
  bold/Support/MsgHandling.h \
  bold/Support/Path.h \
  bold/Support/OFStream.h \
  bold/Support/OStream.h \
  bold/Support/OStrStream.h \
  bold/Support/Slab.h \
  bold/Support/SlabIterator.h \
  bold/Support/TextDiagnosticPrinter.h \
  bold/Thread/Thread.h \
  bold/Thread/ThreadImpl.h \
  bold/Thread/TSQueue.h \
  bold/Thread/TSQueue.tcc
